<resources>
    <string name="app_name">ClimbIt</string>

    <string name="default_project_text">Rubble</string>
    <string name="projects_title">Projects</string>
    <string name="add_project">Add Project</string>
    <string name="done">Done</string>
    <string name="name">Name…</string>
    <string name="grade">Grade…</string>
    <string name="crag">Crag…</string>
    <string name="logbook">Logbook</string>
    <string name="add_climb">Add Climb</string>
    <string name="filter">Filter</string>
    <string name="one_climb">1 route</string>
    <string name="num_climbs">%d routes</string>
    <string name="delete_capitalised">DELETE</string>
    <string name="total_score">Total Score:</string>
    <string name="redpointed">Redpointed</string>
    <string name="flashed">Flashed</string>
    <string name="onsighted">Onsighted</string>
    <string name="date_climbed">Date Climbed…</string>
    <string name="redpoint">Redpoint</string>
    <string name="flash">Flash</string>
    <string name="onsight">Onsight</string>
    <string name="stars">Stars…</string>
    <string name="style">Style…</string>
    <string name="climb_styles">Climb Styles:</string>
    <string name="climbs">Climbs</string>
</resources>
