<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    tools:context="com.coneill.climbit.view.activities.HomeActivity">

    <View
        android:id="@+id/background_blue"
        android:layout_width="match_parent"
        android:layout_height="222dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="36dp"
        android:text="@string/app_name"
        android:textAppearance="@style/headerText"
        app:layout_constraintStart_toStartOf="@+id/background_blue"
        app:layout_constraintTop_toTopOf="@+id/background_blue" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.coneill.climbit.view.fragments.BottomNavFragment"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="Conor O'Neill"
        android:textAppearance="@style/subHeadingText"
        app:layout_constraintBottom_toBottomOf="@+id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleTextView"
        app:layout_constraintVertical_bias="0.8" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/fragment"
        app:layout_constraintTop_toTopOf="@+id/background_blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="100dp"
            android:paddingBottom="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/totalScoreContainer"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/white_rounded_rectangle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="96dp">

                <TextView
                    android:id="@+id/totalScoreHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/total_score"
                    android:textAppearance="@style/homeCardHeaders"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/totalScoreTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAppearance="@style/bigScoreText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/graphContainer"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:background="@drawable/white_rounded_rectangle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="96dp">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/climb_styles"
                    android:textAppearance="@style/homeCardHeaders"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>
